# RiEngine

./: .gitignore  README.md  meson.build
app/: main.cpp
src/: RiEngine.hpp
src/RiEngine/: Exception.cpp  Exception.hpp  Format.cpp  Format.hpp
src/RiEngine/ResourceLoader/: MeshImporter.cpp  MeshImporter.hpp  PipelineImporter.cpp  PipelineImporter.hpp
src/RiEngine/loaders/: MeshLoader.cpp  MeshLoader.hpp  PipelineLoader.cpp  PipelineLoader.hpp
src/RiEngine/pch/: pch.hpp
subprojects/: SPIRV-Cross.wrap  assimp.wrap  glm.wrap  spdlog.wrap  toml11.wrap
tasks/: test.sh
tests/: testMeshLoad.cpp
tests/game/meshes/: rise.toml
tests/game/pipelines/: rise.toml
